--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>Straw Poll Clone</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  </head>
+  <body>
+    {% block content %}
+    {% endblock %}
+  </body>
 </html>
