--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Straw Poll Clone</h1>
-<h4>(a clone of) The place to create instant, real-time polls for free.</h4>
-<form action="">
+<h1>Straw Poll</h1>
+<form method="POST" action="">
   <input id="question" type="text" placeholder="Type your question here">
   <ul id="options">
     <li><input type="text" name="" id="" placeholder="Enter poll option"></li>
