--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Straw Poll Clone</title>
+    <title>Straw Poll</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   </head>
   <body>
     {% block content %}
     {% endblock %}
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
   </body>
 </html>
