--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Straw Poll</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-  </head>
-  <body>
-    {% block content %}
-    {% endblock %}
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>{{ title }}</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+</head>
+<body>
+  {% block content %}
+  {% endblock %}
+  <script src="{{ url_for('static', filename='index.js') }}"></script>
+</body>
 </html>
