all links are reachable

--- a/src/templates/poll.html
+++ b/src/templates/poll.html
@@ -1,3 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+  <h2>{{ poll.title }}</h2>
+  this is poll.html
+  <button>
+    <a href="">Results</a>
+  </button>
 {% endblock %}
