--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,16 +2,18 @@
 {% block content %}
   <h1>Straw Poll</h1>
   <form method="POST" action="">
-    <input type="text" placeholder="Type your question here">
-    <ul id="options">
-      <li><input type="text" name="" id="" placeholder="Enter poll option"></li>
-      <li><input type="text" name="" id="" placeholder="Enter poll option"></li>
-      <li><input type="text" name="" id="" placeholder="Enter poll option"></li>
-    </ul>
+    {{ form.hidden_tag() }}
+    <h2>
+      {{ form.title(placeholder="Type your question here") }}
+    </h2>
+    <!-- 
+      <ul id="options">
+        <li><input type="text" name="" id="" placeholder="Enter poll option"></li>
+        <li><input type="text" name="" id="" placeholder="Enter poll option"></li>
+        <li><input type="text" name="" id="" placeholder="Enter poll option"></li>
+      </ul>
+    -->
     <div>
-      <input type="checkbox" name="foo" id="">
-      <label for="foo">Allow multiple poll answers</label>
-    </div>
-    <input type="button" value="Create Poll">
+    {{ form.create_poll() }}
   </form>
 {% endblock %}
