nearly completed everything

--- a/straw_poll/templates/home.html
+++ b/straw_poll/templates/home.html
@@ -11,8 +11,10 @@
       <div>{{ form.option4(placeholder="Enter poll option") }}</div>
       <div>{{ form.option5(placeholder="Enter poll option") }}</div>
     </div>
-    <input type="checkbox" name="allow_multiple">
-    <label for="allow_multiple">Allow multiple poll answers</label>
+    <div>
+      <input type="checkbox" name="allow_multiple">
+      <label for="allow_multiple">Allow multiple poll answers</label>
+    </div>
     {{ form.create_poll() }}
   </form>
 {% endblock %}
