--- a/straw_poll/templates/poll.html
+++ b/straw_poll/templates/poll.html
@@ -1,13 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
   <h2 id="title">{{ poll.title }}</h2>
+  {% if poll.allows_multiple_poll_answers %}
+    <p id="select-all-msg">Select all that apply</p>
+  {% endif %}
   <form method="POST" action="">
     <div id="options">
+      {% if poll.option1 %}
       <div><input type="checkbox" name="option1"><label for="option1">{{ poll.option1 }}</label></div>
+      {% endif %}
+      <!--  -->
+      {% if poll.option2 %}
       <div><input type="checkbox" name="option2"><label for="option2">{{ poll.option2 }}</label></div>
+      {% endif %}
+      <!--  -->
+      {% if poll.option3 %}
       <div><input type="checkbox" name="option3"><label for="option3">{{ poll.option3 }}</label></div>
+      {% endif %}
+      <!--  -->
+      {% if poll.option4 %}
       <div><input type="checkbox" name="option4"><label for="option4">{{ poll.option4 }}</label></div>
+      {% endif %}
+      <!--  -->
+      {% if poll.option5 %}
       <div><input type="checkbox" name="option5"><label for="option5">{{ poll.option5 }}</label></div>
+      {% endif %}
+      <!--  -->
     </div>
       {{ form.vote() }}
   </form>
@@ -15,4 +33,11 @@
     <a class="btn" href="{{ url_for('results', poll_id=poll.id) }}">Results</a>
   </button>
   <button id="share-btn">Share</button>
+  <script>
+    const foo = document.getElementById('select-all-msg');
+    if (foo) {
+      const boxesDiv = document.getElementById("options");
+      const boxes = boxesDiv.children;
+    }
+  </script>
 {% endblock %}
