fix: disallow checking multiple checkboxes for single choice polls

--- a/straw_poll/templates/home.html
+++ b/straw_poll/templates/home.html
@@ -12,7 +12,7 @@
       <div>{{ form.option5(placeholder="Enter poll option") }}</div>
     </div>
     <div>
-      <input type="checkbox" name="allow_multiple">
+      <input id="allow-multiple-btn" type="checkbox" name="allow_multiple">
       <label for="allow_multiple">Allow multiple poll answers</label>
     </div>
     {{ form.create_poll() }}
