--- a/straw_poll/static/index.css
+++ b/straw_poll/static/index.css
@@ -7,11 +7,6 @@ input[type="text"] {
   width: 350px;
 }
 
-/* #options {
-  padding: 0;
-  list-style-type: none;
-} */
-
 .btn {
   color: #000;
   text-decoration: none;
@@ -19,4 +14,8 @@ input[type="text"] {
 
 #options {
   margin: 20px 0px;
+}
+
+#allow-multiple-btn {
+  margin-bottom: 20px;
 }
