--- a/straw_poll/static/index.css
+++ b/straw_poll/static/index.css
@@ -16,6 +16,10 @@ input[type="text"] {
   margin: 20px 0px;
 }
 
+#options div {
+  margin: 5px 0;
+}
+
 #allow-multiple-btn {
   margin-bottom: 20px;
 }
