--- a/straw_poll/templates/poll.html
+++ b/straw_poll/templates/poll.html
@@ -50,15 +50,18 @@
   <button id="share-btn">Share</button>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
   <script>
-    $("input:checkbox").on('click', function() {
-      var $box = $(this);
-      if ($box.is(":checked")) {
-        var group = "input:checkbox";
-        $(group).prop("checked", false);
-        $box.prop("checked", true);
-      } else {
-        $box.prop("checked", false);
-      }
-    });
+    const hasSelectAllThatApply = document.getElementById('select-all-that-apply');
+    if (!hasSelectAllThatApply) {
+      $("input:checkbox").on('click', function() {
+        var $box = $(this);
+        if ($box.is(":checked")) {
+          var group = "input:checkbox";
+          $(group).prop("checked", false);
+          $box.prop("checked", true);
+        } else {
+          $box.prop("checked", false);
+        }
+      });
+    }
   </script>
 {% endblock %}
