--- a/straw_poll/templates/base.html
+++ b/straw_poll/templates/base.html
@@ -2,12 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
+
   <title>{{ title }}</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
   {% block content %}
   {% endblock %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 </html>
