--- a/straw_poll/templates/home.html
+++ b/straw_poll/templates/home.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
   <form method="POST" action="">
-    <h1>Straw Poll</h1>
+    <h2>Straw Poll</h2>
     {{ form.hidden_tag() }}
-    {{ form.title(placeholder="Type your question here") }}
+    {{ form.title(placeholder="Type your question here", class="mt-3 form-control", style="background-color: #f4f5f6") }}
     <div id="options">
-      <div>{{ form.option1(placeholder="Enter poll option") }}</div>
-      <div>{{ form.option2(placeholder="Enter poll option") }}</div>
-      <div>{{ form.option3(placeholder="Enter poll option") }}</div>
-      <div>{{ form.option4(placeholder="Enter poll option") }}</div>
-      <div>{{ form.option5(placeholder="Enter poll option") }}</div>
+      <div>{{ form.option1(placeholder="Enter poll option", class="form-control", style="background-color: #f4f5f6") }}</div>
+      <div>{{ form.option2(placeholder="Enter poll option", class="form-control", style="background-color: #f4f5f6") }}</div>
+      <div>{{ form.option3(placeholder="Enter poll option", class="form-control", style="background-color: #f4f5f6") }}</div>
+      <div>{{ form.option4(placeholder="Enter poll option", class="form-control", style="background-color: #f4f5f6") }}</div>
+      <div>{{ form.option5(placeholder="Enter poll option", class="form-control", style="background-color: #f4f5f6") }}</div>
     </div>
-    <div>
-      <input id="allow-multiple-btn" type="checkbox" name="allow_multiple">
-      <label for="allow_multiple">Allow multiple poll answers</label>
+    <div class="form-check">
+      <input class="form-check-input" id="allow-multiple-btn" type="checkbox" name="allow_multiple">
+      <label class="form-check-label" for="allow_multiple">Allow multiple poll answers</label>
     </div>
-    {{ form.create_poll() }}
+    {{ form.create_poll(class="mt-3 btn btn-primary") }}
   </form>
 {% endblock %}
