--- a/straw_poll/templates/results.html
+++ b/straw_poll/templates/results.html
@@ -3,43 +3,63 @@
   <h2 id="title">{{ poll.title }}</h2>
   <div id="options">
     {% if poll.option1 %}
-    <div>
-      <p>{{ poll.option1 }}<span class="right">{{ poll.option1_results }} votes ‒ {{ percentages[0] }}</span></p>
-    </div>
-    {% endif %}
-    <!--  -->
-    {% if poll.option2 %}
-    <div>
-      <p>{{ poll.option2 }}<span class="right">{{ poll.option2_results }} votes ‒ {{ percentages[1] }}</span></p>
-    </div>
-    {% endif %}
-    <!--  -->
-    {% if poll.option3 %}
-    <div>
-      <p>{{ poll.option3 }}<span class="right">{{ poll.option3_results }} votes ‒ {{ percentages[2] }}</span></p>
-    </div>
-    {% endif %}
-    <!--  -->
-    {% if poll.option4 %}
-    <div>
-      <p>{{ poll.option4 }}<span class="right">{{ poll.option4_results }} votes ‒ {{ percentages[3] }}</span></p>
-    </div>
-    {% endif %}
-    <!--  -->
-    {% if poll.option5 %}
-    <div>
-      <p>{{ poll.option5 }}<span class="right">{{ poll.option5_results }} votes ‒ {{ percentages[4] }}</span></p>
-    </div>
-    {% endif %}
-    <!--  -->
-  </div>
-  <h4 style="margin-top: 30px;">
-    {{ poll.option1_results + poll.option2_results + poll.option3_results + poll.option4_results + poll.option5_results}} votes
-    <span>
-      <div class="right">
-        <button><a class="btn" href="{{ url_for('poll', poll_id=poll.id) }}">Vote</a></button>
-        <button id="share-btn">Share</button>
+    <div class="d-flex">
+      <div class="flex-fill">
+        <p class="h5">{{ poll.option1 }}</p>
       </div>
-    </span>
-  </h4>
+      <div>
+          {{ poll.option1_results }} votes - {{ percentages[0] }}
+      </div>
+    </div>
+    {% endif %}
+    {% if poll.option2 %}
+    <div class="d-flex">
+      <div class="flex-fill">
+        <p class="h5">{{ poll.option2 }}</p>
+      </div>
+      <div>
+          {{ poll.option2_results }} votes - {{ percentages[1] }}
+      </div>
+    </div>
+    {% endif %}
+    {% if poll.option3 %}
+    <div class="d-flex">
+      <div class="flex-fill">
+        <p class="h5">{{ poll.option3 }}</p>
+      </div>
+      <div>
+          {{ poll.option3_results }} votes - {{ percentages[2] }}
+      </div>
+    </div>
+    {% endif %}
+    {% if poll.option4 %}
+    <div class="d-flex">
+      <div class="flex-fill">
+        <p class="h5">{{ poll.option4 }}</p>
+      </div>
+      <div>
+          {{ poll.option4_results }} votes - {{ percentages[3] }}
+      </div>
+    </div>
+    {% endif %}
+    {% if poll.option5 %}
+    <div class="d-flex">
+      <div class="flex-fill">
+        <p class="h5">{{ poll.option5 }}</p>
+      </div>
+      <div>
+          {{ poll.option5_results }} votes - {{ percentages[4] }}
+      </div>
+    </div>
+    {% endif %}
+  </div>
+  <div class="d-flex">
+    <div class="flex-fill">
+      <h5 class="fw-bold">{{ poll.option1_results + poll.option2_results + poll.option3_results + poll.option4_results + poll.option5_results}} votes</h5>
+    </div>
+    <div class="">
+      <button class="btn btn-primary" onclick="window.location = `{{ url_for('poll', poll_id=poll.id) }}`">Vote</button>
+      <button class="btn btn-secondary" id="share-btn">Share</button>
+    </div>
+  </div>
 {% endblock %}
